You are now able to view assignments and programmers

--- a/WorkManager/Views/Assignations/Edit.cshtml
+++ b/WorkManager/Views/Assignations/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WorkManager.Models.Assignment
+﻿@model WorkManager.Models.Assignation
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Assignment</h4>
+<h4>Assignation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,14 +14,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="ProgrammerId" class="control-label"></label>
+                <select asp-for="ProgrammerId" class="form-control" asp-items="ViewBag.ProgrammerId"></select>
+                <span asp-validation-for="ProgrammerId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AssignmentName" class="control-label"></label>
-                <input asp-for="AssignmentName" class="form-control" />
-                <span asp-validation-for="AssignmentName" class="text-danger"></span>
+                <label asp-for="AssignmentId" class="control-label"></label>
+                <select asp-for="AssignmentId" class="form-control" asp-items="ViewBag.AssignmentId"></select>
+                <span asp-validation-for="AssignmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
