--- a/WorkManager/Views/Assignments/Index.cshtml
+++ b/WorkManager/Views/Assignments/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Employee)
+                @Html.DisplayNameFor(model => model.AssignmentName)
             </th>
             <th></th>
         </tr>
@@ -28,9 +28,10 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Employee.Id)
+                @Html.DisplayFor(modelItem => item.AssignmentName)
             </td>
             <td>
+                <a asp-action="Create" asp-controller="Assignations" asp-route-id="@item.Id">Add Employee</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
