--- a/WorkManager/Views/Assignations/Create.cshtml
+++ b/WorkManager/Views/Assignations/Create.cshtml
@@ -1,26 +1,23 @@
-﻿@model WorkManager.Models.Assignment
+﻿@model WorkManager.Models.Assignation
 
 @{
     ViewData["Title"] = "Create";
+    var test = Context.GetRouteData().Values["id"];
 }
-
-<h1>Create</h1>
-
-<h4>Assignment</h4>
+<br />
+<h4>Assignation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="ProgrammerId" class="control-label"></label>
+                <select asp-for="ProgrammerId" class ="form-control" asp-items="ViewBag.ProgrammerId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AssignmentName" class="control-label"></label>
-                <input asp-for="AssignmentName" class="form-control" />
-                <span asp-validation-for="AssignmentName" class="text-danger"></span>
+                @*<label type="hidden" asp-for="AssignmentId" class="control-label"></label>*@
+                <input type="hidden" asp-for="AssignmentId" value="test"></input>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -30,7 +27,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller="Assignments">Back to List</a>
 </div>
 
 @section Scripts {
