--- a/WorkManager/Views/Assignations/Details.cshtml
+++ b/WorkManager/Views/Assignations/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WorkManager.Models.Assignment
+﻿@model WorkManager.Models.Assignation
 
 @{
     ViewData["Title"] = "Details";
@@ -7,20 +7,20 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Assignment</h4>
+    <h4>Assignation</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Assignment)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Assignment.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AssignmentName)
+            @Html.DisplayNameFor(model => model.Programmer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AssignmentName)
+            @Html.DisplayFor(model => model.Programmer.Id)
         </dd>
     </dl>
 </div>
