--- a/WorkManager/Views/Assignations/Index.cshtml
+++ b/WorkManager/Views/Assignations/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<WorkManager.Models.Contact>
+﻿@model IEnumerable<WorkManager.Models.Assignation>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Assignments</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,13 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                @Html.DisplayNameFor(model => model.Assignment)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContactNavigation)
+                @Html.DisplayNameFor(model => model.Programmer)
             </th>
             <th></th>
         </tr>
@@ -28,13 +25,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Email)
+                @Html.DisplayFor(modelItem => item.Assignment.AssignmentName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactNavigation.Id)
+                @Html.DisplayFor(modelItem => item.Programmer.FirstName) @Html.DisplayFor(modelItem => item.Programmer.LastName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
