--- a/WorkManager/Views/Assignments/AddEmployee.cshtml
+++ b/WorkManager/Views/Assignments/AddEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model WorkManager.Models.Assignment
+﻿@model WorkManager.Models.Assignation
 
 @{
     ViewData["Title"] = "Create";
@@ -6,21 +6,19 @@
 
 <h1>Create</h1>
 
-<h4>Assignment</h4>
+<h4>Assignation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="AddEmployee">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="ProgrammerId" class="control-label"></label>
+                <select asp-for="ProgrammerId" class ="form-control" asp-items="ViewBag.ProgrammerId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AssignmentName" class="control-label"></label>
-                <input asp-for="AssignmentName" class="form-control" />
-                <span asp-validation-for="AssignmentName" class="text-danger"></span>
+                <label asp-for="AssignmentId" class="control-label"></label>
+                <select asp-for="AssignmentId" class ="form-control" asp-items="ViewBag.AssignmentId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
