--- a/WorkManager/Views/Home/Index.cshtml
+++ b/WorkManager/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>To use the Work Manager, please check out the pages in the header</a>.</p>
 </div>
