--- a/WorkManager/Views/Assignments/Index.cshtml
+++ b/WorkManager/Views/Assignments/Index.cshtml
@@ -4,39 +4,46 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Assignments</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a type="button" class="btn btn-outline rounded" asp-action="Create">Add Assignment</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
+                Company
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AssignmentName)
+                Programmers
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AssignmentName)
-            </td>
-            <td>
-                <a asp-action="Create" asp-controller="Assignations" asp-route-id="@item.Id">Add Employee</a> |
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AssignmentName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @item.GetAllEmployees()
+                </td>
+                <td class="d-flex justify-content-end">
+                    <a type="button" class="btn btn-outline rounded" asp-action="Create" asp-controller="Assignations" asp-route-id="@item.Id"> Add Employee</a>
+                    <a type="button" class="btn btn-outline rounded" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a type="button" class="btn btn-outline rounded" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a type="button" class="btn btn-outline-danger rounded" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
