--- a/WorkManager/Views/Contacts/Create.cshtml
+++ b/WorkManager/Views/Contacts/Create.cshtml
@@ -4,16 +4,14 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Contact</h4>
+<h4>Contact Information</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ContactId" class="control-label"></label>
+                <label asp-for="ContactId" class="control-label">Programmer</label>
                 <select asp-for="ContactId" class ="form-control" asp-items="ViewBag.ContactId"></select>
             </div>
             <div class="form-group">
@@ -22,12 +20,12 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
+                <label asp-for="PhoneNumber" class="control-label">Phone number</label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add" class="btn btn-primary" />
             </div>
         </form>
     </div>
