--- a/WorkManager/Views/Contacts/Index.cshtml
+++ b/WorkManager/Views/Contacts/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Programmer contact information</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a type="button" class="btn btn-outline rounded" asp-action="Create">Add Contact</a>
 </p>
 <table class="table">
     <thead>
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Phone number
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ContactNavigation)
+                Programmer
             </th>
             <th></th>
         </tr>
@@ -34,12 +34,12 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ContactNavigation.Id)
+                @Html.DisplayFor(modelItem => item.ContactNavigation.FullName)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td class="d-flex justify-content-end">
+                <a type="button" class="btn btn-outline rounded" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a type="button" class="btn btn-outline rounded" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a type="button" class="btn btn-outline-danger rounded" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
