--- a/WorkManager/Views/Home/Index.cshtml
+++ b/WorkManager/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>To use the Work Manager, please check out the pages in the header</a>.</p>
+    <img 
+    src="https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG9mZmljZXxlbnwwfHwwfHw%3D&w=1000&q=80"
+    style="height:100%;width:100%;"
+    />
 </div>
