--- a/WorkManager/Views/Assignments/Create.cshtml
+++ b/WorkManager/Views/Assignments/Create.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
 <h4>Assignment</h4>
 <hr />
 <div class="row">
@@ -13,17 +11,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AssignmentName" class="control-label"></label>
+                <label asp-for="AssignmentName" class="control-label">Company name</label>
                 <input asp-for="AssignmentName" class="form-control" />
                 <span asp-validation-for="AssignmentName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="Description" class="control-label">Assignment description</label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Add" class="btn btn-outline rounded" style="width: 20%" />
             </div>
         </form>
     </div>
@@ -34,5 +32,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
