--- a/WorkManager/Views/Shared/_Layout.cshtml
+++ b/WorkManager/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Programmers" asp-action="Index">Programmers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
+                            <a class="nav-link" asp-area="" asp-controller="Contacts" asp-action="Index">Programmer contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Assignments" asp-action="Index">Assignments</a>
