--- a/WorkManager/Views/Programmers/Create.cshtml
+++ b/WorkManager/Views/Programmers/Create.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
 <h4>Programmer</h4>
 <hr />
 <div class="row">
@@ -23,7 +21,7 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+               <input type="submit" value="Add" class="btn btn-outline rounded" style="width: 20%"/>
             </div>
         </form>
     </div>
